fix: dark mode

--- a/packages/forms/resources/css/components/markdown-editor.css
+++ b/packages/forms/resources/css/components/markdown-editor.css
@@ -8,6 +8,10 @@
     @apply w-full h-full min-h-full border-none rounded-lg;
 }
 
+.dark .EasyMDEContainer .CodeMirror {
+    @apply bg-gray-700 text-white;
+}
+
 .EasyMDEContainer .CodeMirror .CodeMirror-scroll {
     @apply tracking-normal whitespace-pre-wrap font-mono text-sm;
 }
